# ranked-pairs-rs

./: Cargo.toml  LICENSE
src/: graph.rs  lib.rs  pairwise.rs  test.rs
