[package]
name = "ranked-pairs"
version = "0.0.2-alpha"
edition = "2024"
license = "MIT"
categories = ["mathematics"]
keywords = ["election", "voting", "tally", "ranked-pairs"]
repository = "https://github.com/rsammelson/ranked-pairs-rs"
description = """
A ranked pairs (Tideman method) election tallying library.
"""

[dependencies]
itertools = "0.14"
rangemap = "1.6"
thiserror = "2"
